--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,34 @@
          </tr>
          {% endfor %}
 
+         {% if invoices.has_other_pages %}
+
+         <div class="btn-group" role="group" aria-label="Item pagination">
+             {% if invoices.has_previous%}
+             <a href="?page={{ invoices.previous_page_number }}" class="btn btn-outline-primary">&laquo;</a>
+
+             {% endif %}
+
+             {% for page_number in invoices.paginator.page_range %}
+
+             {% if invoices.number == page_number %}
+
+             <button class="btn btn-outline-primary active">
+              <span>{{page_number}}<span class="sr-only">{current}</span></span>
+             </button>
+             {% else %}
+                <a href="?page={{page_number}}" class="btn btn-outline-primary">{{page_number}}</a>
+
+             {% endif %}
+             {% endfor %}
+
+             {% if invoices.has_next%}
+              <a href="?page={{ invoices.next_page_number }}" class="btn btn-outline-primary">&laquo;</a>
+
+             {% endif %}
+
+         </div>
+         {% endif%}
          {% else %}
          <p class="text-center text-white">Not Found.</p>
          {% endif %}
