--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -16,7 +16,7 @@
               <div class="row gutters">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                   <div class="custom-actions-btns mb-5 p-3 text-right">
-                    <a href="#" class="btn btn-primary">
+                    <a href="{% url 'invoice-pdf' pk=obj.pk %}" class="btn btn-primary">
                       <i class="icon-download">
                         </i> Downloard
                       </a>
