--- a/templates/invoice-pdf.html
+++ b/templates/invoice-pdf.html
@@ -6,12 +6,153 @@
   <!-- Boostrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"> 
 
-
-    
-
-   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+ <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
   <title>Facture</title>
+
+  <style>
+
+body{
+  margin: 0;
+  padding: 0;
+  font: 400 .875rem 'Open Sans', sans-serif;
+  background: #1A233A;
+  color: white;
+  position: relative;
+  height: 100%;
+}
+.invoice-container{
+  padding: 1rem;
+}
+.invoice-container .invoice-header .invoice-logo{
+  margin: 0.8rem 0 0 0;
+  display: inline-block;
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #bcd0f7;
+}
+.invoice-container .invoice-header .invoice-logo img{
+ max-width: 130px;
+}
+.invoice-container .invoice-header address{
+  font-size: 0.8rem;
+  color: #8a99b5;
+  margin: 0;
+}
+.invoice-container .invoice-details{
+  margin: 1rem 0 0 0;
+  padding: 1rem;
+  line-height: 180%;
+  background: #1a233a;
+}
+.invoice-container .invoice-details .invoice-num{
+  text-align: right;
+  font-size: 0.8rem;
+}
+.invoice-container .invoice-body{
+  padding: 1rem 0 0 0;
+}
+.invoice-container .invoice-footer{
+  text-align: center;
+  font-size: 0.7rem;
+  margin: 5px 0 0 0;
+}
+.invoice-status {
+  text-align: center;
+  padding: 1rem;
+  background: #272e48;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+}
+.invoice-status h2.status{
+  margin: 0 0 0.8rem 0;
+}
+.invoice-status h5.status-title{
+  margin: 0 0 0.8rem 0;
+  color: #8a99b5;
+}
+.invoice-status p.status-type{
+  margin: 0.8rem 0 0 0;
+  padding: 0;
+  line-height: 150%;
+}
+
+.invoice-status i {
+  font-size: 1.5rem;
+  margin: 0 0 1rem 0;
+  display: inline-block;
+  padding: 1rem;
+  background: #1a233a;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px
+}
+.invoice-status .badge{
+  text-transform: uppercase;
+}
+@media (max-width: 767px){
+  .invoice-container{
+    padding: 1rem;
+  }
+}
+.card {
+  background: #272E48;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 0;
+  margin-bottom: 1rem;
+}
+.custom-table{
+  border: 1px solid #2b3958;
+
+}
+.custom-table thead{
+  background-color: #0455b8;
+
+}
+.custom-table thead th{
+  border: 0;
+  color: #0b0b0b;
+}
+.custom-table>tbody tr:hover{
+  background-color: #172033;
+}
+.custom-table>tbody tr:nth-of-type(even){
+  background-color: #1a243a;
+}
+
+
+.custom-table>tbody td{
+  border: 1px solid #2e3d5f;
+}
+.table{
+  background-color: #0b1326;
+  color: #05070b;
+  font-size: .75rem;
+}
+.text-success{
+  color: #05070b !important;
+}
+.custom-actions-btns{
+  margin: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+.custom-actions-btns .btn{
+  margin: .3rem 0 .3rem .3rem;
+}
+
+
+
+
+
+
+
+
+  </style>
 </head>
 <body>
   <div class="container">
@@ -74,7 +215,8 @@
                  
                  <div class="row gutters">
                   <div class="col-lg-12 col-md-12 col-sm-12">
-                    <div class="table-responsive">
+                    <div class="table
+                    -responsive">
                       <table class="table custom-table m-0">
                           <thead>
                             <tr>
@@ -129,11 +271,9 @@
                                 PAID:
                                 {% if obj.paid %}
   
-                                <strong> yes</strong>
+                                <strong style="color:green">YES</strong> 
                               {% else %}
-                                <strong style="
-                                color:green;
-                                ";>no</strong> 
+                              <strong style="color:red">NO</strong> 
                               {% endif %}
                         </td>
                             </tr>
