--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -15,12 +15,12 @@
                   <!-- row start -->
               <div class="row gutters">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                  <div class="custom-actions-btns mb-5 p-3 text-right">
+                  <div class="custom-actions-btns mb-5  text-right">
                     <a href="{% url 'invoice-pdf' pk=obj.pk %}" class="btn btn-primary">
                       <i class="icon-download">
                         </i> Downloard
                       </a>
-                      <a href="#" class="btn btn-">
+                      <a href="#" class="btn btn-secondary">
                         <i class="icon-printer">
                           </i> Print
                         </a>
@@ -57,7 +57,7 @@
                         
                       <address>
                         {{obj.customer.name}}<br>
-                        {{obj.customer.address}}, {{obj.customer.city}}, Cameroon
+                        {{obj.customer.address}}, {{obj.customer.city}}, Burundi
                        </address>
                     </div>
                     
